deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: apache2
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:latest  # Apache HTTP Server Docker image
          ports:
            - containerPort: 80  # Port Apache listens on
